--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
       </header>
 
-      <div class="burger-menu">
+      <!-- <div class="burger-menu">
         <div id="burger-menu-container" onclick="menuOpen()">
           <div class="bar1"></div>
           <div class="bar2"></div>
@@ -41,7 +41,7 @@
             <li><a href="./contatti/">Contatti</a></li>
           </ul>
         </div>
-      </div>
+      </div> -->
 
       <script src="./burgerMenu.js"></script>
 
@@ -63,12 +63,14 @@
             Avvocato <br />
             Augusto Cassini
           </h1>
-          <h3>"Ius est ars boni et aequi" - Celso, II secolo d.C</h3>
+          <h3><q>Ius est ars boni et aequi</q> - Celso, II secolo d.C</h3>
           <h3>
-            "Il diritto è l'arte di ciò che è buono ed equo" - Celso, II secolo
-            d.C
+            <q>Il diritto è l'arte di ciò che è buono ed equo</q>
+            - Celso, II secolo d.C
           </h3>
-          <button>richiedi consulenza</button>
+          <button>
+            <a href="mailto:augusto.cassini@gmail.com">richiedi consulenza</a>
+          </button>
         </div>
       </div>
 
@@ -86,7 +88,9 @@
               enim eaque unde nulla totam dolor. Aliquam ab vel maxime at
               veniam. Consectetur, voluptatibus aliquam!
             </p>
-            <button>click</button>
+            <button>
+              <a href="mailto:augusto.cassini@gmail.com">contattami</a>
+            </button>
           </div>
         </div>
       </div>
@@ -98,7 +102,7 @@
               <img src="./images/icons/scale.png" alt="" />
             </div>
             <div class="competence-text">
-              <h4>Competence Title</h4>
+              <h4>Diritto Civile</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -107,7 +111,7 @@
               <img src="./images/icons/law.png" alt="" />
             </div>
             <div class="competence-text">
-              <h4>Competence Title</h4>
+              <h4>Diritto Amministrativo</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -116,7 +120,7 @@
               <img src="./images/icons/family.png" alt="" />
             </div>
             <div class="competence-text">
-              <h4>Competence Title</h4>
+              <h4>Diritto di Famiglia</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -230,7 +234,9 @@
             ipsam. Accusamus eveniet exercitationem iure ipsam, ducimus saepe
             nisi voluptate iste aspernatur.
           </p>
-          <button>click</button>
+          <button>
+            <a href="mailto:augusto.cassini@gmail.com">richiedi consulenza</a>
+          </button>
         </div>
       </div>
 
@@ -265,8 +271,7 @@
         </div>
       </div>
       <div class="copyrights">
-        <p>Augusto Cassini © 2022</p>
-        <p>P. Iva 01377990930</p>
+        <p>© Augusto Cassini - P. IVA 01377990930</p>
       </div>
     </div>
   </body>
