fixed mobile styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./styles.css" />
   <title>Avv. Augusto Cassini</title>
 </head>
+
 <body>
   <main class="landing-page-wrapper">
     <header>
@@ -65,11 +67,12 @@
           <h2>Avvocato Augusto Cassini</h2>
           <p>
             Mi sono laureato con 106/110 nel 1995 discutendo una tesi di diritto dell'esecuzione civile su
-            “l'Espropriazione dei beni indivisi” con la prof. Annalisa Lorenzetto Peserico.
+            “L'espropriazione dei beni indivisi” con la prof. Annalisa Lorenzetto Peserico. <br />
             Mi dedico al diritto civile ed in particolare al campo del diritto di famiglia, delle successioni, dei
             diritti reali, delle obbligazioni e dei contratti, del recupero dei crediti e delle procedure esecutive.
-            Sono amministratore di sostegno dal 2013.
-            Sono iscritto all'Albo Speciale della Cassazione e delle Giurisdizioni Superiori.
+            <br />
+            Sono amministratore di sostegno dal 2013. <br />
+            Sono iscritto all'Albo Speciale della Cassazione e delle Giurisdizioni Superiori.<br />
             Corrispondo in inglese.
           </p>
           <button>
@@ -244,6 +247,11 @@
                 <img src="./images/icons/email.png" alt="" />
                 augusto.cassini@gmail.com</a>
             </li>
+            <li>
+              <a href="mailto:augusto.cassini@avvocatipordenone.it?subject=Richiesta di consulenza">
+                <img src="./images/icons/email.png" alt="" />
+                augusto.cassini@avvocatipordenone.it</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -253,4 +261,5 @@
     </div>
   </main>
 </body>
+
 </html>
