--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
           Avvocato <br />
           Augusto Cassini
         </h1>
-        <h3><q>Ius est ars boni et aequi</q> - Celso, II secolo d.C</h3>
-        <h3>
-          <q>Il diritto è l'arte di ciò che è buono ed equo</q>
-          - Celso, II secolo d.C
-        </h3>
+        <h3>Jus est ars boni et aequi</h3>
+        <h3>Il diritto è l'arte di ciò che è buono ed equo - Celso, II secolo d.C</h3>
+
         <button>
           <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">richiedi consulenza</a>
         </button>
@@ -64,7 +62,7 @@
         </div>
 
         <div class="intro-section-text">
-          <h2>Avvocato Augusto Cassini</h2>
+          <h2>Avvocato <br />Augusto Cassini</h2>
           <p>
             Mi sono laureato con 106/110 nel 1995 discutendo una tesi di diritto dell'esecuzione civile su
             “L'espropriazione dei beni indivisi” con la prof. Annalisa Lorenzetto Peserico. <br />
@@ -99,20 +97,20 @@
         </div>
         <div class="single-competence-wrapper">
           <div class="competence-icon">
-            <img src="./images/icons/law.png" alt="" />
-          </div>
-          <div class="competence-text">
-            <h4>Diritto Amministrativo</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-        </div>
-        <div class="single-competence-wrapper">
-          <div class="competence-icon">
             <img src="./images/icons/family.png" alt="" />
           </div>
           <div class="competence-text">
             <h4>Diritto di Famiglia</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Mi occupo di negoziazioni assistite in materia di separazioni e divorzi.</p>
+          </div>
+        </div>
+        <div class="single-competence-wrapper">
+          <div class="competence-icon">
+            <img src="./images/icons/law.png" alt="" />
+          </div>
+          <div class="competence-text">
+            <h4>Amministratore di Sostegno</h4>
+            <p>Come attività di volontariato, offro servizi come amministratore di sostegno.</p>
           </div>
         </div>
       </div>
@@ -149,61 +147,6 @@
         </ul>
       </div>
     </section>
-
-    <section class="customer-revs">
-      <div class="overlay"></div>
-      <!-- Slideshow container -->
-      <div class="slideshow-container">
-        <!-- here goes what customers say -->
-        <h2>Recensioni</h2>
-
-        <!-- Full-width slides/quotes -->
-        <div class="mySlides">
-          <div class="mySlidesContainer">
-            <q>
-              Curabitur ligula augue, lobortis in interdum nec, dignissim vel
-              arcu. Donec semper aliquet mattis. Curabitur convallis urna
-              congue viverra elementum.
-            </q>
-          </div>
-          <p class="author">Joe Bloggs</p>
-        </div>
-
-        <div class="mySlides">
-          <div class="mySlidesContainer">
-            <q>
-              Vivamus est felis, tempor sed mauris ac, malesuada sollicitudin
-              ipsum. Etiam nec ullamcorper nibh, ac pretium sapien. Donec
-              pharetra sollicitudin ligula, sit amet ornare nisi vestibulum
-              et.
-            </q>
-          </div>
-          <p class="author">Jane Doe</p>
-        </div>
-
-        <div class="mySlides">
-          <div class="mySlidesContainer">
-            <q>
-              Mauris malesuada, ex at volutpat euismod, velit diam placerat
-              lacus, eu rhoncus enim metus ultricies nisi. Mauris pharetra
-              tristique nisl.</q>
-          </div>
-          <p class="author">John Doe</p>
-        </div>
-
-        <!-- Next/prev buttons -->
-        <a class="prev">&#10216;</a>
-        <a class="next">&#10217;</a>
-      </div>
-      <!-- END slidehow-container -->
-
-      <!-- Dots/bullets/indicators -->
-      <div class="dot-container">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-      </div>
-    </section>
     <script src="carousel.js"></script>
     <div class="message-section">
       <div class="overlay"></div>
@@ -211,10 +154,7 @@
       <div class="content">
         <h1>Bisogno di una consulenza?</h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam
-          ab provident vel modi qui exercitationem deserunt nesciunt ipsum
-          ipsam. Accusamus eveniet exercitationem iure ipsam, ducimus saepe
-          nisi voluptate iste aspernatur.
+          Sono disponibile per consuleza e ricevo su appuntamento da concordare tramite mail o telefonicamente.
         </p>
         <button>
           <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">richiedi consulenza</a>
