more text update

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           </a>
         </li>
         <li>
-          <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">
+          <a href="mailto:segreteria@avvocatoaugustocassini.com?subject=Richiesta di consulenza">
             <img src="./images/icons/email.png" alt="" />
-            augusto.cassini@gmail.com</a>
+            segreteria@avvocatoaugustocassini.com</a>
         </li>
       </ul>
     </header>
@@ -51,7 +51,7 @@
         <h3>Il diritto è l'arte di ciò che è buono ed equo - Celso, II secolo d.C</h3>
 
         <button>
-          <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">richiedi consulenza</a>
+          <a href="mailto:segreteria@avvocatoaugustocassini.com?subject=Richiesta di consulenza">richiedi consulenza</a>
         </button>
       </section>
     </section>
@@ -74,7 +74,7 @@
             Corrispondo in inglese.
           </p>
           <button>
-            <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">contattami</a>
+            <a href="mailto:segreteria@avvocatoaugustocassini.com?subject=Richiesta di consulenza">contattami</a>
           </button>
         </div>
       </div>
@@ -88,11 +88,11 @@
           </div>
           <div class="competence-text">
             <h4>Diritto Civile</h4>
-            <p>Mi occupo di Successioni,
+            <p>Diritto di famiglia, Successioni,
               Diritti reali,
               Obbligazioni e Contratti,
-              Recupero Crediti
-              Procedure Esecutive</p>
+              Recupero Crediti e
+              Procedure Esecutive.</p>
           </div>
         </div>
         <div class="single-competence-wrapper">
@@ -100,8 +100,8 @@
             <img src="./images/icons/family.png" alt="" />
           </div>
           <div class="competence-text">
-            <h4>Diritto di Famiglia</h4>
-            <p>Mi occupo di negoziazioni assistite in materia di separazioni e divorzi.</p>
+            <h4>Stragiudiziale</h4>
+            <p>Consulenze, Mediazioni, Negoziazioni e Arbitrati.</p>
           </div>
         </div>
         <div class="single-competence-wrapper">
@@ -109,8 +109,8 @@
             <img src="./images/icons/law.png" alt="" />
           </div>
           <div class="competence-text">
-            <h4>Amministratore di Sostegno</h4>
-            <p>Come attività di volontariato, offro servizi come amministratore di sostegno.</p>
+            <h4>Diritto Amministratvo</h4>
+            <p>Consulenze e Ricorsi.</p>
           </div>
         </div>
       </div>
@@ -140,9 +140,9 @@
             </a>
           </li>
           <li>
-            <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">
+            <a href="mailto:segreteria@avvocatoaugustocassini.com?subject=Richiesta di consulenza">
               <img src="./images/icons/email.png" alt="" />
-              augusto.cassini@gmail.com</a>
+              segreteria@avvocatoaugustocassini.com</a>
           </li>
         </ul>
       </div>
@@ -157,7 +157,7 @@
           Sono disponibile per consuleza e ricevo su appuntamento da concordare tramite mail o telefonicamente.
         </p>
         <button>
-          <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">richiedi consulenza</a>
+          <a href="mailto:segreteria@avvocatoaugustocassini.com?subject=Richiesta di consulenza">richiedi consulenza</a>
         </button>
       </div>
     </div>
@@ -183,9 +183,9 @@
               </a>
             </li>
             <li>
-              <a href="mailto:augusto.cassini@gmail.com?subject=Richiesta di consulenza">
+              <a href="mailto:segreteria@avvocatoaugustocassini.com?subject=Richiesta di consulenza">
                 <img src="./images/icons/email.png" alt="" />
-                augusto.cassini@gmail.com</a>
+                segreteria@avvocatoaugustocassini.com</a>
             </li>
             <li>
               <a href="mailto:augusto.cassini@avvocatipordenone.it?subject=Richiesta di consulenza">
