more text update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <li>
           <a href="tel:0434084078">
             <img src="./images/icons/phone.png" alt="" />
-            0434.084078
+            (+39) 0434 084078
+          </a>
+        </li>
+        <li>
+          <a href="tel:3280692485">
+            (+39) 328 069 2485
           </a>
         </li>
         <li>
@@ -97,7 +102,7 @@
         </div>
         <div class="single-competence-wrapper">
           <div class="competence-icon">
-            <img src="./images/icons/family.png" alt="" />
+            <img src="./images/icons/agreement.png" alt="" />
           </div>
           <div class="competence-text">
             <h4>Stragiudiziale</h4>
@@ -136,7 +141,13 @@
           <li>
             <a href="tel:0434084078">
               <img src="./images/icons/phone.png" alt="" />
-              0434.084078
+              (+39) 0434 084078
+            </a>
+          </li>
+          <li>
+            <a href="tel:3280692485">
+              <img src="./images/icons/phone.png" alt="" />
+              (+39) 328 069 2485
             </a>
           </li>
           <li>
@@ -179,7 +190,13 @@
             <li>
               <a href="tel:0434084078">
                 <img src="./images/icons/phone.png" alt="" />
-                0434.084078
+                (+39) 0434 084078
+              </a>
+            </li>
+            <li>
+              <a href="tel:3280692485">
+                <img src="./images/icons/phone.png" alt="" />
+                (+39) 328 069 2485
               </a>
             </li>
             <li>
@@ -189,7 +206,7 @@
             </li>
             <li>
               <a href="mailto:augusto.cassini@avvocatipordenone.it?subject=Richiesta di consulenza">
-                <img src="./images/icons/email.png" alt="" />
+                <img src="./images/icons/pec.png" alt="" />
                 augusto.cassini@avvocatipordenone.it</a>
             </li>
           </ul>
