more text update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./styles.css" />
   <title>Avv. Augusto Cassini</title>
+  <meta name="description" content="Avvocato Augusto Cassini Pordenone">
+  <meta name="author" content="Augusto Cassini">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
