--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
           <div class="competence-text">
             <h4>Stragiudiziale</h4>
-            <p>Consulenze, Mediazioni, Negoziazioni e Arbitrati.</p>
+            <p>Consulenze, Mediazioni, Negoziazioni Assistite e Arbitrati.</p>
           </div>
         </div>
         <div class="single-competence-wrapper">
@@ -117,7 +117,7 @@
             <img src="./images/icons/law.png" alt="" />
           </div>
           <div class="competence-text">
-            <h4>Diritto Amministratvo</h4>
+            <h4>Diritto Amministrativo</h4>
             <p>Consulenze e Ricorsi.</p>
           </div>
         </div>
